--- a/Clase 29 - Servidor en Capas/public/index.html
+++ b/Clase 29 - Servidor en Capas/public/index.html
@@ -31,31 +31,12 @@
     </nav>
 
     <div class="container" style="margin-top: 30px;">
-        <div class="row" id="orders">
-            <div class="col-12">
-                <h1 class="text-center">Orders</h1>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card text-center">
-                    <div class="card-header">
-                        El vendedor Feliz
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Orden Numero: 56</h5>
-                        <p class="card-text">Este pedido fue realizado por el usuario PatoJAD y contiene los siguientes
-                            productos:</p>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">1</li>
-                        <li class="list-group-item">6</li>
-                    </ul>
-                    <div class="card-footer text-body-secondary">
-                        $ 4500
-                    </div>
-                </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <h1>Mi sistema de ordenes</h1>
             </div>
         </div>
+        <div class="row" id="orders"></div>
     </div>
 
     <!-- IMPORT Bootstrap -->
